--- a/Employee_mvc/appsettings.json
+++ b/Employee_mvc/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionString": {
+    "Employ_mvc": "Data Source=LAPTOP-2UH1FDRP\\MSSQLSERVER01;Initial Catalog=Employ_mvc;Integrated Security=True;"
+  },
   "AllowedHosts": "*"
 }
